<resources>
    <string name="app_name">来米汇</string>

    <string name="navigation_1">店铺</string>
    <string name="navigation_2">搜索</string>
    <string name="navigation_3">推荐</string>
    <string name="navigation_4">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    呵呵
    <string name="title_activity_login">Sign in</string>
    <!-- login -->
    <string name="login_text1">来米汇</string>
    <string name="login_text2">TM</string>
    <string name="login_text3">手机号：</string>
    <string name="login_text4">验证码：</string>
    <string name="login_text5">点击获取</string>
    <string name="login_text6">登录</string>
    <string name="login_text7">微信授权登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_start">StartActivity</string>

    <string name="inloading">正在加载，请稍后</string>
    <string name="loadmore_complete">没有更多</string>
    <string name="loadmore_retry">点击重试</string>
    <string name="title_activity_address_modify">AddressModifyActivity</string>
</resources>
