<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coldraincn.laimihui.LoginActivity"
    android:background="@mipmap/background">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="53dp"
        android:layout_height="48dp"
        app:srcCompat="@mipmap/logo_round"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="1dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text1"

        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:text="@string/login_text2"
        android:textAlignment="viewStart"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
      />


    <android.support.constraint.ConstraintLayout
        android:layout_width="252dp"
        android:layout_height="256dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.636"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.136">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_text3"
            android:inputType="phone"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="108dp"
            android:layout_height="42dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:ems="10"
            android:hint="@string/login_text4"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/button1"
            app:layout_constraintLeft_toLeftOf="@+id/editText1" />

        <com.coldraincn.laimihui.widget.CountDownTimerButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/login_text5"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="@+id/editText1"
            app:layout_constraintTop_toBottomOf="@+id/editText1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:text="@string/login_text7"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/login_text6"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>

